2013-05-06  Eli Zaretskii  <eliz@gnu.org>

	* doc/make.texi (Loaded Object Example): Add a note about building
	shared objects on MS-Windows.

2013-05-05  Paul Smith  <psmith@gnu.org>

	* makeint.h (OUTPUT_SYNC_LINE, OUTPUT_SYNC_RECURSE): Rename
	output-sync options "job" to "line" and "make" to "recurse".
	* main.c (decode_output_sync_flags): Ditto.
	* job.c (reap_children): Ditto.
	(start_job_command): Ditto.
	* make.1: Ditto.
	* doc/make.texi (Parallel Output): Ditto.

	* job.c (child_out): Write newlines explicitly, and don't do
	anything if the message is empty.
	(sync_output): Put working dir messages around stdout AND stderr.
	(start_job_command): Move the tmp file assignment earlier.  After
	we do it, write the command line to the temp file to get the order
	correct.

	* misc.c (message): Remove special handling for output_sync.
	(error): Ditto.

2013-05-04  Paul Smith  <psmith@gnu.org>

	* loadapi.c (gmk_alloc): New function.
	* gnumake.h: Add gmk_alloc().  Clean GMK_EXPORT a bit to avoid MAIN.
	* makeint.h (GMK_EXPORT): New handling, vs. MAIN.
	* doc/make.texi (Loaded Object API): Add information on the memory
	handling functions.
	(Loaded Object Example): Create an example.

	* job.c (pump_from_tmp): (Rename) Write to stdout/stderr using
	FILE* rather than fd.  It's not a good idea to mix and match.

2013-05-04  Eli Zaretskii  <eliz@gnu.org>

	* makeint.h (ftruncate) [_MSC_VER]: Redirect to _chsize.
	(_S_ISDIR): If not defined (MinGW64), define to S_ISDIR.

2013-05-04  Paul Smith  <psmith@gnu.org>

	* job.c (child_out): Handle EINTR and incomplete write scenarios.
	(sync_init): New function: separate the initialization code.
	(assign_child_tempfiles): Remove truncation from this function,
	(sync_output): and add it here after output is generated.
	(reap_children): Always call sync_output() in case output_sync was
	reset after the child started, due to error.
	(start_job_command): Create new sync_cmd variable.  Use new method
	for initializing the handle.